Fixed scrollbar popping when scrolling to top

--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -5,15 +5,16 @@
     margin: 0 auto;
     top: 0;
     background-color: var(--theme);
-    transition: calc(var(--transition-duration)*1.5) cubic-bezier(0.175, 1, 0.3, 1.05);
+    transition: calc(var(--transition-duration)*1.5);
 }
 
 html:not([data-scroll='0']) .header {
     background-color: var(--header);
     width: 768px;
-    top: var(--gap);
+    top: calc(var(--gap)*.5);
     border-radius: var(--radius);
     box-shadow: 3px 5px 15px var(--shadow-color);
+    transition: calc(var(--transition-duration)*1.5) cubic-bezier(0.175, 1, 0.3, 1.1);
 }
 
 html:not([data-scroll='0']) .nav {
